--- a/task/index.html
+++ b/task/index.html
@@ -57,13 +57,12 @@
 		</div>
 		</div>
 		<br>
-		<div>
 		<!--<button class="btn btn-primary" onclick="checkLoginState();">Login with FaceBook</button>-->
 		<!-- <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">Login with Facebook
-		<!--</fb:login-button> -->-->
+		<!--</fb:login-button> -->
 		<!--<div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false"></div>-->
-		<button class="btn btn-danger">Login with Google</button>
-		</div>
+		<div>
+		<button class="btn btn-danger">Login with Google</butto>
 		<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">Login With Facebook
 		</fb:login-button>
 		</div>
