--- a/task/index.html
+++ b/task/index.html
@@ -58,7 +58,7 @@
 		</div>
 		<br>
 		<div>
-		<button class="btn btn-danger">Login with Google</butto>  
+		<button class="btn btn-danger">Login with Google</button>  
 		<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">Login With Facebook
 		</fb:login-button>
 		</div>
