--- a/task/index.html
+++ b/task/index.html
@@ -56,8 +56,8 @@
 		<br>
 		<input  type="submit" value="Login" class="btn btn-warning">
 		</form>
-		</div>
-		<div class="g-signin2 text-center" data-onsuccess="onSignIn"></div>
+		</div class="text-center">
+		<div class="g-signin2 text-center text-center" data-onsuccess="onSignIn"></div>
 		<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
 		</fb:login-button>
 		</div>
